feat: incluido swagger e finalizado CRUD de accounts

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,3 +28,11 @@ security.jwt.access-token-minutes=15
 security.jwt.refresh-token-days=7
 security.jwt.secret=CHANGE_ME_TO_A_LONG_RANDOM_SECRET_WITH_32+_CHARS
 
+# Swagger
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+springdoc.swagger-ui.persistAuthorization=true
+
+
+
